--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
-            <div class="container px-4 px-lg-5 text-center">
+            <div class="container px-4 px-lg-5 text-center text-white">
                 <h1 class="mb-1">HMP-TI</h1>
                 <h3 class="mb-5"><em>Himpunan Mahasiswa Prodi Teknik Informatika</em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
@@ -43,11 +43,10 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+                        <h2>HMP-TI UNISKA MAB</h2>
                         <p class="lead mb-5">
-                            This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-                            <a href="https://unsplash.com/">Unsplash</a>
-                            !
+                            HM-TI UNISKA MAB adalah Himpunan Mahasiswa prodi Teknologi Informatika yang berada di Univerasitas Islam Kalimantan Muhammad Arsyad Al-Banjari 
+                            <a href="https://uniska-bjm.ac.id/">Univerasitas Islam Kalimantan Muhammad Arsyad Al-Banjari</a>
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
                     </div>
@@ -112,29 +111,28 @@
         </section>
         <!-- Callout-->
         <section class="callout">
-            <div class="container px-4 px-lg-5 text-center">
+            <div class="container px-4 px-lg-5 text-center text-white">
                 <h2 class="mx-auto mb-5">
-                    Welcome to
-                    <em>your</em>
-                    next website!
+                    Member of
+                    <em>HMP-TI UNISKA MAB</em>
                 </h2>
-                <a class="btn btn-primary btn-xl" href="/galery/index.html#!">Download Now!</a>
+                <a class="btn btn-primary btn-xl" href="galery/index.html">Click here</a>
             </div>
         </section>
         <!-- Portfolio-->
         <section class="content-section" id="portfolio">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
-                    <h3 class="text-secondary mb-0">Portfolio</h3>
-                    <h2 class="mb-5">Recent Projects</h2>
+                    <h3 class="text-secondary mb-0">HMP-TI UNISKA</h3>
+                    <h2 class="mb-5">Our Program</h2>
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Stationary</div>
-                                    <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                                    <div class="h2">STUDY EXCURSIE</div>
+                                    <p class="mb-0">STUDY EXCURSIE on malang</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
@@ -144,8 +142,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Ice Cream</div>
-                                    <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                                    <div class="h2">DIES NATALIS HMP-TI KE 11</div>
+                                    <p class="mb-0">MAKRAB and more competition</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
@@ -155,8 +153,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Strawberries</div>
-                                    <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                                    <div class="h2">BUKA BERSAMA (BUKBER) HMP-TI UNISKA X DOT INDONESIA</div>
+                                    <p class="mb-0">BUKA BERSAMA DI PANTI ASUHAN BERSAMA HMP-TI UNISKA berkolaborasi dengan DOT INDONESIA</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
@@ -166,8 +164,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Workspace</div>
-                                    <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                                    <div class="h2">SOSIAL IT</div>
+                                    <p class="mb-0">SOSIALISASI IT in batola</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
@@ -186,9 +184,9 @@
         </section>
         <!-- Map-->
         <div class="map" id="contact">
-            <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15932.983204318483!2d114.58442905379673!3d-3.2891724245145464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2de4237593538403%3A0x99a0aa15ccd6836f!2sUniversitas%20Islam%20Kalimantan%20Muhammad%20Arsyad%20Al%20Banjari%20Banjarmasin!5e0!3m2!1sid!2sid!4v1689819296743!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <br />
-            <small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a></small>
+            <small><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15932.983204318483!2d114.58442905379673!3d-3.2891724245145464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2de4237593538403%3A0x99a0aa15ccd6836f!2sUniversitas%20Islam%20Kalimantan%20Muhammad%20Arsyad%20Al%20Banjari%20Banjarmasin!5e0!3m2!1sid!2sid!4v1689819296743!5m2!1sid!2sid"></a></small>
         </div>
         <!-- Footer-->
         <footer class="footer text-center">
